@@ -77,6 +77,9 @@ void meta_preview_set_frame_flags   (MetaPreview            *preview,
 void meta_preview_set_button_layout (MetaPreview            *preview,
                                      const MetaButtonLayout *button_layout);
 
+GdkRegion * meta_preview_get_clip_region (MetaPreview *preview,
+                                          gint new_window_width,
+                                          gint new_window_height);
 
 GdkPixbuf* meta_preview_get_icon (void);
 GdkPixbuf* meta_preview_get_mini_icon (void);
